# fastapi-sqlalchemy-alembic-example

./: .env.example  .gitignore  Makefile  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 279d1dafbf56_.py
src/: database.py  models.py  schemas.py
